[package]
name = "cargo-piston"
description = "Utility tool for streamlining the configuration of rust binaries for various operating systems"
repository = "https://github.com/dav-anderson/cargo-piston"
version = "0.4.5"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
cargo-subcommand = "0.12"
clap = {version = "4", features = ["derive"]}
anyhow = "1.0.57"
env_logger = "0.10"
cargo_metadata = "0.23.1"
serde_json = "1.0.145"
image = "0.25.9"
regex = "1.11.1"
ureq = { version = "2", features = ["json"] }
jsonwebtoken = { version="10.2.0", features =["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
base64 = "0.22"

